*Empty MediaWiki Message*

--- a/1890-ӧд_во.mw
+++ b/1890-ӧд_во.mw
@@ -1,15 +1,17 @@
-'''1890 во''' - [[Григорий календар]] серти, абу кассяна, пансьö середасянь.
+{{Вояс|1890}}
+
+'''1890 во''' — [[Григорий календар]] серти абу [[кассяна во]], пансьö [[середа]]сянь.
 
 == Гажъяс ==
 == Лоӧмторъяс ==
 == Чужисны ==
-* [[10 урасьӧм|урасьӧм 10 лун]] — [[Пастернак, Борис Леонидович|Борис Леонидович Пастернак]], (кулiс [[1960]]), роч да Сöвет кадся поэт да гижысь, литератураысь [[Нобель нима премия]] босьтысь ([[1958]]).
-* [[20 йирым|йирым 20 лун]] - [[Чисталёв Тима Вень]] ({{lang-ru|Чисталёв Вениамин Тимофеевич}}) (куліс [[1939]]), [[коми гижысь]].
+* [[10 урасьӧм|урасьӧм тӧлысь 10 лун]] — роч да Сöвет кадся поэт да гижысь, литератураысь [[Нобель нима премия]] босьтысь ([[1958]]) [[Пастернак Борис Леонидович|Борис Пастернак]] (кулiс [[1960]]).
+* [[20 йирым|йирым тӧлысь 20 лун]] — [[коми гижысь]] [[Чисталёв Тима Вень]] (куліс [[1939]]).
 
 == Кулісны ==
-* [[7 сора|сора 7 лун]] — [[Нестле, Анри|Анри Нестле]], «Nestle» компания восьтысь.
-* [[29 сора|сора 29 лун]] — [[Гог, Винсент ван|Винсент ван Гог]], (чужис [[1853]]), [[Нидерландъяс]]са да [[Франция]]са [[серпасалысь]]-постимпрессионист.
-* [[26 ӧшым|ӧшым 22 лун]] — [[Шлиман, Генрих|Генрих Шлиман]] (чужис [[1822]]), [[Германия|немеч]] археолог.
+* [[7 сора|сора тӧлысь 7 лун]] — «Nestle» компания восьтысь [[Нестле, Анри|Анри Нестле]].
+* [[29 сора|сора тӧлысь 29 лун]] — [[Нидерландъяс]]са да [[Франция]]са [[серпасалысь]]-постимпрессионист [[Гог, Винсент ван|Винсент ван Гог]] (чужис [[1853 во|1853]]).
+* [[26 ӧшым|ӧшым тӧлысь 26 лун]] — [[Германия|немеч]] археолог [[Шлиман, Генрих|Генрих Шлиман]] (чужис [[1822 во|1822]]).
 
 [[Категория:1890 во]]
 
