--- a/1891-ӧд_во.mw
+++ b/1891-ӧд_во.mw
@@ -1,4 +1,6 @@
-'''1891 во''' — [[кассяна во]], [[Григорий календар]] серти пансьö [[четверг]]сянь.
+{{Вояс|1891}}
+
+'''1891 во''' — абу [[кассяна во]], [[Григорий календар]] серти пансьö [[четверг]]сянь.
 
 == Лоӧмторъяс ==
 
@@ -7,7 +9,10 @@
 * [[24 рака|рака тöлысь 24 лун]] — Сöвет кадся физик, [[академик]] ([[1932]]), [[СССР-са наукаяс академия]]са Президент ([[1945]]) [[Вавилов Сергей Иванович|Сергей Вавилов]] (куліс [[1951]]).
 * [[15 ода кора|ода-кора тöлысь 15 лун]] — [[роч кыв|роч]] гижысь [[Булгаков Михаил Афанасьевич|Михаил Булгаков]] (куліс [[1940]]).
 * [[7 вӧльгым|вӧльгым тöлысь 7 лун]] — [[роч кыв|роч]] гижысь [[Фурманов Дмитрий Андреевич|Дмитрий Фурманов]] (куліс [[1926]]).
-== Кувсисны ==
+== Кулісны ==
+== Ӧшмӧс ==
+
+[[Категория:1891 во]]
 
 [[af:1891]]
 [[am:1891 እ.ኤ.አ.]]
