*Empty MediaWiki Message*

--- a/1892-ӧд_во.mw
+++ b/1892-ӧд_во.mw
@@ -1,13 +1,16 @@
-'''1892 во''' - [[Григорий календар]] серти, кассяна во, пансьö пекничасянь.
+{{Вояс|1892}}
+
+'''1892 во''' — [[Григорий календар]] серти [[кассяна во]], пансьö [[пекнича]]сянь.
 
 == Лоӧмторъяс ==
 
 == Чужисны ==
-* [[3 тӧв шӧр|тöвшöр 3 лун]] — [[Толкин, Джон Рональд Руэл|Джон Рональд Руэл Толкин]], [[Англия]]са [[гижысь]], кыв туялысь, филолог, «Властелин Колец» трилогиялöн автор (кулiс [[1973]]).
-* [[8 йирым|йирым 8 лун]] — [[Цветаева, Марина Ивановна|Марина Цветаева]], [[роч поэт]] (кулiс [[1941]]).
-* [[31 йирым|йирым 31 лун]] — [[Алехин, Александр Александрович|Александр Алехин]], шахматъясысь мирса 4-öд чемпион (кулiс [[1946]]).
-== Кувсисны ==
-* [[3 ӧшым|ӧшым 3 лун]] - [[Фет, Афанасий Афанасьевич|Афанасий Фет]], [[роч поэт]], вуджöдчысь (чужис [[1820]])
+* [[3 тӧв шӧр|тöвшöр тӧлысь 3 лун]] — [[Англия кыв|англияса]]са гижысь, кыв туялысь, филолог, «Властелин Колец» трилогиялöн автор [[Толкин, Джон Рональд Руэл|Джон Рональд Руэл Толкин]] (кулiс [[1973]])
+* [[8 йирым|йирым тӧлысь 8 лун]] — [[роч кыв|роч]] поэт [[Цветаева Марина Ивановна|Марина Цветаева]] (кулiс [[1941]])
+* [[31 йирым|йирым тӧлысь 31 лун]] — шахматъясысь мирса 4-öд чемпион [[Алехин Александр Александрович|Александр Алехин]] (кулiс [[1946]])
+== Кулісны ==
+* [[3 ӧшым|ӧшым тӧлысь 3 лун]] — [[роч кыв|роч]] поэт да вуджöдчысь [[Фет Афанасий Афанасьевич|Афанасий Фет]] (чужис [[1820 во|1820]])
+== Ӧшмӧс ==
 
 [[Категория:1892 во]]
 
