*Empty MediaWiki Message*

--- a/1893-ӧд_во.mw
+++ b/1893-ӧд_во.mw
@@ -1,9 +1,14 @@
+{{Вояс|1893}}
+
 '''1893 во''' – абу [[кассяна во]], [[Григорий календар]] серти пансьӧ [[вежалун]]сянь.
 
 == Лоӧмторъяс ==
 * [[Кывтыва (Княжпогост район)|Кывтываын]] восьтöма нывбабаяслысь Крестовоздвиженскöй манастыр.
 == Чужисны ==
 == Кулісны ==
+== Ӧшмӧс ==
+
+[[Категория:1893 во]]
 
 [[af:1893]]
 [[am:1893 እ.ኤ.አ.]]
