*Empty MediaWiki Message*

--- a/1894-ӧд_во.mw
+++ b/1894-ӧд_во.mw
@@ -1,8 +1,12 @@
+{{Вояс|1894}}
 '''1894 во''' — абу [[кассяна во]], [[Григорий календар]] серти пансьö [[выльлун]]сянь.
 
 == Лоӧмторъяс ==
 == Чужисны ==
-== Кувсисны ==
+== Кулісны ==
+== Ӧшмӧс ==
+
+[[Категория:1894 во]]
 
 [[af:1894]]
 [[am:1894 እ.ኤ.አ.]]
