--- a/Коми_кыв.mw
+++ b/Коми_кыв.mw
@@ -174,6 +174,7 @@
 [[cv:Коми чĕлхи]]
 [[de:Komi (Sprache)]]
 [[en:Komi language]]
+[[eo:Komia lingvo]]
 [[es:Idioma komi]]
 [[et:Komi keel]]
 [[fa:زبان کومی]]
