*Empty MediaWiki Message*

--- a/1895-ӧд_во.mw
+++ b/1895-ӧд_во.mw
@@ -1,3 +1,4 @@
+{{Вояс|1895}}
 '''1895 во''' – абу [[кассяна во]], [[Григорий календар]] серти пансьӧ [[воторник]]сянь.
 
 == Лоӧмторъяс ==
@@ -6,6 +7,8 @@
 * [[27 ӧшым|ӧшым тӧлысь 27 лун]] – нималана [[коми кыв]] [[туялысь]], [[коми гижысь]] [[Лыткин Илля Вась]] (куліс [[1981]])
 == Кулісны ==
 == Ӧшмӧс==
+
+[[Категория:1895 во]]
 
 [[af:1895]]
 [[am:1895 እ.ኤ.አ.]]
