*Empty MediaWiki Message*

--- a/1896-ӧд_во.mw
+++ b/1896-ӧд_во.mw
@@ -1,12 +1,14 @@
+{{Вояс|1896}}
 '''1896 во''' – [[кассяна во]], [[Григорий календар]] серти пансьӧ [[середа]]ӧ.
 
 == Лоöмторъяс ==
-* [[6 кос му|косму тöлысь 6]]–[[15 кос му|15 лунъяс]] – Гожся Олимпиадаса ворсöмъяс ([[Греция]], [[Афинъяс]])
-
+* [[6 кос му|косму тöлысь 6]]–[[15 кос му|15 лунъяс]] – [[I гожся Олимпиадаса ворсӧмъяс]] ([[Греция]], [[Афинъяс]])
 == Чужисны ==
 * [[2 вӧльгым|вӧльгым тӧлысь 2 лун]] – [[Коми республика|Коми асшöр обласьт]] лöсьöдны вöзйысь [[Батиев Дмитрий Александрович|Дмитрий Батиев]].
-
 == Кулісны ==
+== Ӧшмӧс ==
+
+[[Категория:1896 во]]
 
 [[af:1896]]
 [[am:1896 እ.ኤ.አ.]]
