*Empty MediaWiki Message*

--- a/1897-ӧд_во.mw
+++ b/1897-ӧд_во.mw
@@ -1,9 +1,13 @@
+{{Вояс|1897}}
 '''1897 во''' — абу [[кассяна во]], [[Григорий календар]] серти пансьö [[пекнича]]сянь.
 
 == Лоӧмторъяс ==
 * [[28 тӧв шӧр|тöвшöр тöлысь 28 лун]] — [[Россия]]ын йöзöс медводдза пасъялöм.
 == Чужисны ==
-== Кувсисны ==
+== Кулісны ==
+== Ӧшмӧс ==
+
+[[Категория:1897 во]]
 
 [[af:1897]]
 [[am:1897 እ.ኤ.አ.]]
