*Empty MediaWiki Message*

--- a/1898-ӧд_во.mw
+++ b/1898-ӧд_во.mw
@@ -1,8 +1,12 @@
+{{Вояс|1898}}
 '''1898 во''' — абу [[кассяна во]], [[Григорий календар]] серти пансьö [[субӧта]]сянь.
 
 == Лоӧмторъяс ==
 == Чужисны ==
-== Кувсисны ==
+== Кулісны ==
+== Ӧшмӧс ==
+
+[[Категория:1898 во]]
 
 [[af:1898]]
 [[am:1898 እ.ኤ.አ.]]
