*Empty MediaWiki Message*

--- a/1899-ӧд_во.mw
+++ b/1899-ӧд_во.mw
@@ -1,8 +1,12 @@
+{{Вояс|1899}}
 '''1899 во''' — абу [[кассяна во]], [[Григорий календар]] серти пансьö [[вежалун]]сянь.
 
 == Лоӧмторъяс ==
 == Чужисны ==
-== Кувсисны ==
+== Кулісны ==
+== Ӧшмӧс ==
+
+[[Категория:1899 во]]
 
 [[af:1899]]
 [[am:1899 እ.ኤ.አ.]]
