*Empty MediaWiki Message*

--- a/1880-ӧд_во.mw
+++ b/1880-ӧд_во.mw
@@ -1,3 +1,4 @@
+{{Вояс|1880}}
 '''1880 во''' – [[кассяна во]], [[Григорий календар]] серти пансьӧ [[четверг]]сянь.
 
 == Лоӧмторъяс ==
@@ -5,6 +6,9 @@
 == Чужисны ==
 * [[18 йирым|йирым тöлысь 18 лун]] – [[роч кыв|роч]] поэт [[Блок Александр Александрович|Александр Блок]] (куліс [[1921]])
 == Кулісны ==
+== Ӧшмӧс==
+
+[[Категория:1880 во]]
 
 [[af:1880]]
 [[am:1880 እ.ኤ.አ.]]
