*Empty MediaWiki Message*

--- a/1875-ӧд_во.mw
+++ b/1875-ӧд_во.mw
@@ -1,21 +1,24 @@
-'''1875 во''' - [[Григорий календар]] серти, абу кассяна во, пансьö пекничасянь.
+{{Вояс|1875}}
+'''1875 во''' — [[Григорий календар]] серти абу [[кассяна во]], пансьö [[пекнича]]сянь.
 
 == Гажъяс ==
 == Лоӧмторъяс ==
 == Чужисны ==
-* [[14 тӧв шӧр|тöвшöр 14 лун]] — [[Швейцер, Альберт|Альберт Швейцер]], [[Германия|немеч]] теолог и врач, [[Нобель нима мирса премия]] босьтысь ([[1952]]) (кулiс [[1965]]).
-* [[6 лӧддза-номъя|лöддза-номъя 6 лун]] — [[Манн, Томас|Томас Манн]], [[Германия|немеч]] гижысь (кулiс [[1955]]).
-* [[26 сора|сора 26 лун]] — [[Юнг, Карл Густав|Карл Густав Юнг]], [[Швейцария]]са психиатр, психолог, философ (кулiс [[1961]]).
-* [[19 вӧльгым|вöльгым 19 лун]] — [[Калинин, Михаил Иванович|Михаил Иванович Калинин]], [[СССР]]са государственнöй и партияса уджалысь (кулiс [[1946]]).
-* [[4 ӧшым|ӧшым 4 лун]] — [[Рильке, Райнер Мария|Райнер Мария Рильке]], [[Прага|немеч]] [[поэт]] (кулiс [[1926]]).
+* [[14 тӧв шӧр|тöвшöр тӧлысь 14 лун]] — [[Германия|немеч]] теолог и врач, [[Нобель нима мирса премия]] босьтысь ([[1952]]) [[Швейцер, Альберт|Альберт Швейцер]] (кулiс [[1965]])
+* [[6 лӧддза-номъя|лöддза-номъя тӧлысь 6 лун]] — [[Германия|немеч]] гижысь [[Манн, Томас|Томас Манн]] (кулiс [[1955]])
+* [[26 сора|сора тӧлысь 26 лун]] — [[Швейцария]]са психиатр, психолог, философ [[Юнг, Карл Густав|Карл Густав Юнг]] (кулiс [[1961]])
+* [[19 вӧльгым|вöльгым тӧлысь 19 лун]] — [[СССР]]са государственнöй и партияса уджалысь [[Калинин Михаил Иванович|Михаил Калинин]] (кулiс [[1946]])
+* [[4 ӧшым|ӧшым тӧлысь 4 лун]] — [[Прага|немеч]] [[поэт]] [[Рильке, Райнер Мария|Райнер Мария Рильке]] (кулiс [[1926]])
 
 == Кулісны ==
-* [[4 моз|моз 4 лун]] — [[Андерсен, Ганс Христиан|Ганс Христиан Андерсен]], [[Дания]]са гижысь (чужис [[1805]]).
-* [[10 йирым|йирым 10 лун]] — [[Толстой, Алексей Константинович|Алексей Константинович Толстой]], граф, [[роч]] поэт (чужис [[1817]]).
-* [[29 вӧльгым|вӧльгым 29 лун]] - [[Куратов Ӧльӧш Вань]] ({{lang-ru|Куратов Иван Алексеевич}}), (чужис [[1839]] вося [[18 сора|сора 18 лунӧ]]) - медводдза [[коми поэт]], [[коми литература]]лы подув пуктысь.
-* [[20 ӧшым|ӧшым 20 лун]] — [[Погодин, Михаил Петрович|Михаил Петрович Погодин]], роч историк да гижысь (чужис [[1800]]).
+* [[4 моз|моз тӧлысь 4 лун]] — [[Дания]]са гижысь [[Андерсен, Ганс Христиан|Ганс Христиан Андерсен]] (чужис [[1805]])
+* [[10 йирым|йирым тӧлысь 10 лун]] — граф, [[роч кыв|роч]] поэт [[Толстой Алексей Константинович|Алексей Толстой]] (чужис [[1817]])
+* [[29 вӧльгым|вӧльгым тӧлысь 29 лун]] — медводдза [[коми поэт]], [[коми литература]]лы подув пуктысь [[Куратов Ӧльӧш Вань|Иван Куратов]] (чужис [[1839 во|1839]])
+* [[20 ӧшым|ӧшым тӧлысьи20 лун]] — [[роч кыв|роч]] историк да гижысь [[Погодин Михаил Петрович|Михаил  Погодин]] (чужис [[1800 во|1800]])
 
-[[Категория:1875]]
+== Ӧшмӧс ==
+
+[[Категория:1875 во]]
 
 [[af:1875]]
 [[am:1875 እ.ኤ.አ.]]
