*Empty MediaWiki Message*

--- a/1866-ӧд_во.mw
+++ b/1866-ӧд_во.mw
@@ -1,9 +1,13 @@
+{{Вояс|1866}}
 '''1866 во''' – абу [[кассяна во]], [[Григорий календар]] серти пансьӧ [[выльлун]]сянь.
 
 == Лоöмторъяс ==
 == Чужисны ==
 * [[30 кӧч|кöч тöлысь 30 лун]] – [[коми гижысь]], мир пасьтала нималана философ [[Жаков Пальӧ Кальӧ|Каллистрат Жаков]] (куліс [[1926]])
 == Кулісны ==
+== Ӧшмӧс ==
+
+[[Категория:1866 во]]
 
 [[af:1866]]
 [[am:1866 እ.ኤ.አ.]]
