*Empty MediaWiki Message*

--- a/1865-ӧд_во.mw
+++ b/1865-ӧд_во.mw
@@ -1,11 +1,11 @@
-'''1865 во''' - [[Григорий календар]] серти, абу кассяна во, пансьö вежалунсянь.
+{{Вояс|1865}}
+'''1865 во''' – [[Григорий календар]] серти, абу [[кассяна во]], пансьö [[вежалун]]сянь.
 
-== Гажъяс ==
 == Лоӧмторъяс ==
-* [[13 ӧшым|ӧшым 13]] – [[Усть-Сысольск]]ын воссис общественнöй банк. Кыдзи юöртiс [[«Вöлöгда губернияса ведомосьт»]] газет, банк «будет производить следующие операции: прием вкладов на хранение, учет векселей, выдачу ссуд под залог». Директорöн лоис 1-дза гильдияса купеч М.Н. Латкин, правление пырисны 2-öд гильдияса купечьяс А.А. Жеребцов да В.И. Комлин.
+* [[13 ӧшым|ӧшым тӧлысь 13]] – [[Усть-Сысольск]]ын воссис общественнöй банк. Кыдзи юöртiс "[[Вологодские губернские ведомости]]" газет, банк «будет производить следующие операции: прием вкладов на хранение, учет векселей, выдачу ссуд под залог». Директорöн лоис 1-дза гильдияса купеч М.Н. Латкин, правление пырисны 2-öд гильдияса купечьяс А.А. Жеребцов да В.И. Комлин.
 == Чужисны ==
-
 == Кулісны ==
+== Ӧшмӧс ==
 
 [[Категория:1865 во]]
 
