*Empty MediaWiki Message*

--- a/1860-ӧд_во.mw
+++ b/1860-ӧд_во.mw
@@ -1,11 +1,14 @@
-'''1860 во''' – [[кассяна во]], [[Григорий календар]] серти пансьӧ [[вежалун]]сянь.
+{{Вояс|1860}}
+'''1860 во''' – [[Григорий календар]] серти [[кассяна во]], пансьӧ [[вежалун]]сянь.
 
 == Лоӧмторъяс ==
 * [[Перым коми кыв]] туялысь [[Рогов Ӧврам Микӧл|Николай Роговлöн]] петö "Опыт грамматики пермяцкого языка" [[небӧг]]
 == Чужисны ==
-* [[29 тӧв шӧр|тöвшöр тöлысь 29 лун]] – [[роч гижысь]] да драматург [[Чехов Антон Павлович|Антон Чехов]] (куліс [[1904]])
+* [[29 тӧв шӧр|тöвшöр тöлысь 29 лун]] – [[роч кыв|роч]] гижысьда драматург [[Чехов Антон Павлович|Антон Чехов]] (куліс [[1904]])
 == Кулісны ==
 == Ӧшмӧс==
+
+[[Категория:1860 во]]
 
 [[af:1860]]
 [[am:1860 እ.ኤ.አ.]]
