*Empty MediaWiki Message*

--- a/1863-ӧд_во.mw
+++ b/1863-ӧд_во.mw
@@ -1,5 +1,5 @@
 {{Вояс|1863}}
-'''1863 во''' – [[Григорий календар]] серти [[кассяна во]], пансьö [[четверг]]сянь.
+'''1863 во''' – [[Григорий календар]] серти абу [[кассяна во]], пансьö [[четверг]]сянь.
 
 == Лоӧмторъяс ==
 == Чужисны ==
