*Empty MediaWiki Message*

--- a/Удмурт_кыв.mw
+++ b/Удмурт_кыв.mw
@@ -76,6 +76,7 @@
 [[ar:لغة أدمورتية]]
 [[bat-smg:Udmortu kalba]]
 [[be:Удмурцкая мова]]
+[[be-x-old:Удмурцкая мова]]
 [[bg:Удмуртски език]]
 [[br:Oudmourteg]]
 [[ca:Udmurt]]
