*Empty MediaWiki Message*

--- a/1892-ӧд_во.mw
+++ b/1892-ӧд_во.mw
@@ -3,7 +3,7 @@
 '''1892 во''' — [[Григорий календар]] серти [[кассяна во]], пансьö [[пекнича]]сянь.
 
 == Лоӧмторъяс ==
-
+* [[тулыс]] – Павел Никитич Козлов купеч Туръя [[вӧлӧсьт]]са [[Козлорд]] [[грезд]]ысь (ӧні – [[Сьöська овмöдчöмин|Сьӧськаса]] [[Козлорд (Княжпогост район)|Козлорд]] грезд) ньӧбис [[Кардор]]ысь «Купчик» паракод, вежис нимсӧ «Вымичанин» вылӧ да ветлӧдліс [[Емва (ю)|Емва ю]] кузя.
 == Чужисны ==
 * [[3 тӧв шӧр|тöвшöр тӧлысь 3 лун]] — [[Англия кыв|англияса]]са гижысь, кыв туялысь, филолог, «Властелин Колец» трилогиялöн автор [[Толкин, Джон Рональд Руэл|Джон Рональд Руэл Толкин]] (кулiс [[1973]])
 * [[8 йирым|йирым тӧлысь 8 лун]] — [[роч кыв|роч]] поэт [[Цветаева Марина Ивановна|Марина Цветаева]] (кулiс [[1941]])
