*Empty MediaWiki Message*

--- a/Тигре_(кыв).mw
+++ b/Тигре_(кыв).mw
@@ -1,4 +1,4 @@
-'''Тигре''' (<big>ትግረ</big> ''tigre'' либӧ <big>ትግሬ</big> ''tigrē'', Суданын <big>ኻሳ</big> '''Xasa''', [[Араб кыв|араб]] الخاصية ''ḫāṣiyah'') — тайӧ Эритреяын да Суданын семит кыв. Анбур — <big>ፊደል</big> ''fidel'' либӧ <big>አቡጊዳ</big> ''abugida''.
+'''Тигре''' (<big>ትግረ</big> ''tigre'' либӧ <big>ትግሬ</big> ''tigrē'', Суданын <big>ኻሳ</big> '''Xasa''', [[Араб кыв|араб]] الخاصية ''ḫāṣiyah'') — тайӧ Эритреяын да Суданын семит кыв. Анбур — <big>ፊደል</big> ''fidel'' либӧ <big>አቡጊዳ</big> ''abugida''. Мукӧддырйи мусульманаяс гижӧны араб анбурӧн.
 
 == Тигре анбур ==
 
