*Empty MediaWiki Message*

--- a/XXI_нэм.mw
+++ b/XXI_нэм.mw
@@ -1,8 +1,9 @@
 {{Нэмъяс|21}}
 
-'''XXI (21-ӧд) нэм''' [[Выль лунпас]]ын — танэм. Начался [[1 января]] [[2001 год]]а, продлится до [[31 декабря]] [[2100 год]]а.
+'''XXI (Кызь ӧтиӧд; 21-ӧд) нэм''' — [[Григорий календар]] серти пансьӧ [[2001 во]]ся [[1 тӧв шӧр|тӧвшӧр тӧлысь 1 лунӧ]] да помасьӧ [[2100 во]]ся [[31 ӧшым|ӧшым тӧлысь 31 лунӧ]].
 
 == Медыджыд лоӧмторъяс ==
+* [[2001 во]], [[15 тӧв шӧр|тӧвшӧр тӧлысь 15 лун]] — '''Википедия''' паніс ассьыс уджсö, стöчджыка кö — [[англия кыв]] вылын Википедия. 
 
 [[Категория:XXI нэм|*]]
 
