--- a/XX_нэм.mw
+++ b/XX_нэм.mw
@@ -1,8 +1,10 @@
 {{Нэмъяс|20}}
 
-'''XX нэм''' — последний век [[Второе тысячелетие|2 тысячелетия]]. Один из наиболее кровопролитных в истории человечества.
+'''XX (Кызьöд; 19-öд) нэм''' — мöд сюрсволöн бöръя нэм, пансьö [[1901 во]]ся [[1 тӧв шӧр|тӧвшӧр тӧлысь 1 лунӧ]] да помасьӧ [[2000 во]]ся [[31 ӧшым|ӧшым тӧлысь 31 лунӧ]], йöз олöмын медся вир кисьтана нэм.
 
 == Медыджыд лоӧмторъяс ==
+* [[Айму вӧсна Ыджыд тыш]]
+* [[СССР]] артмöм да киссьöм
 
 [[Категория:XX нэм|*]]
 
