*Empty MediaWiki Message*

--- a/Мера_кыв.mw
+++ b/Мера_кыв.mw
@@ -13,6 +13,7 @@
 [[Категория:Кыв]]
 [[Категория:Финн-йӧгра кывъяс]]
 
+[[be-x-old:Мяранская мова]]
 [[bg:Мерянски език]]
 [[br:Meryeg]]
 [[ca:Merya]]
