The file [[:Image:Bandera_de_Iqaluit.png]] has been removed, as it has been deleted by [[:commons:User:Fastily]]: ''[[commons:COM:OTRS|No permission]] since  13 March 2012''. ''[[m:User:CommonsDelinker|Translate me!]]''

--- a/Икалуит.mw
+++ b/Икалуит.mw
@@ -3,7 +3,7 @@
 |Коми ним                = Икалуит
 |Оригинал ним            = ᐃᖃᓗᐃᑦ <br />Iqaluit
 |Канпас                  = 
-|Дӧрапас                 = Bandera de Iqaluit.png
+|Дӧрапас                 =
 |Му                      = [[Канада]]
 |Статус                  =
 |Район ним               =  Регион
