*Empty MediaWiki Message*

--- a/1856-ӧд_во.mw
+++ b/1856-ӧд_во.mw
@@ -1,5 +1,5 @@
 {{Вояс|1856}}
-'''1856 во''' – [[Григорий календар]] серти абу [[кассяна во]], пансьӧ [[воторник]]сянь.
+'''1856 во''' – [[Григорий календар]] серти [[кассяна во]], пансьӧ [[воторник]]сянь.
 
 == Лоӧмторъяс ==
 == Чужисны ==
