*Empty MediaWiki Message*

--- a/1850-ӧд_во.mw
+++ b/1850-ӧд_во.mw
@@ -1,9 +1,12 @@
+{{Вояс|1850}}
 '''1850 во''' – абу [[кассяна во]], [[Григорий календар]] серти пансьӧ [[воторник]]сянь.
 
 == Лоӧмторъяс ==
 * [[Петыркар|Санкт-Петербургын]] [[Савваитов Павел Иванович|Павел Савваитов]] йöзöдіс "Граматика зырянского языка" да "Зырянско-русский и русско-зырянский словарь" [[небӧг]]ъяс. 
 == Чужисны ==
 == Кулісны ==
+== Ӧшмӧс==
+[[Категория:1850 во]]
 
 [[af:1850]]
 [[am:1850 እ.ኤ.አ.]]
