*Empty MediaWiki Message*

--- a/Пончӧд.mw
+++ b/Пончӧд.mw
@@ -1,7 +1,7 @@
 
 [[Файл:Empetrum nigrum a1.jpg|250px|thumb|right|]]
 
-'''Пончӧд''' либӧ '''миян пончӧд''' (лат. '''Émpetrum''') – вотӧса век веж быдмас, [[пончӧд рӧд]]ын, [[вереск котыр]]ын.
+'''Пончӧд''' либӧ '''миян пончӧд''' (лат. '''Émpetrum''') – вотӧса век веж быдмӧг, [[пончӧд рӧд]]ын, [[вереск котыр]]ын.
 
 ==Ним йылысь==
 
