*Empty MediaWiki Message*

--- a/Коми-Ёдз_кыв.mw
+++ b/Коми-Ёдз_кыв.mw
@@ -52,6 +52,7 @@
 [[Категория:Кыв]]
 [[Категория:Финн-йӧгра кывъяс]]
 
+[[be-x-old:Комі-язьвінская мова]]
 [[cs:Komi-jazvanština]]
 [[en:Komi-Yodzyak language]]
 [[fi:Jazvan komi]]
