*Empty MediaWiki Message*

--- a/Оренбург_обласьт.mw
+++ b/Оренбург_обласьт.mw
@@ -67,6 +67,7 @@
 [[af:Orenburg-oblast]]
 [[ar:أورنبرغ أوبلاست]]
 [[az:Orenburq vilayəti]]
+[[ba:Ырымбур өлкәһе]]
 [[be:Арэнбургская вобласць]]
 [[be-x-old:Арэнбурская вобласьць]]
 [[bg:Оренбургска област]]
