--- a/Мурома_кыв.mw
+++ b/Мурома_кыв.mw
@@ -11,6 +11,7 @@
 [[Категория:Кыв]]
 [[Категория:Финн-йӧгра кывъяс]]
 
+[[be-x-old:Мурамская мова]]
 [[bg:Муромски език]]
 [[br:Mouromeg]]
 [[cs:Muromština]]
