*Empty MediaWiki Message*

--- a/Аймара_(кыв).mw
+++ b/Аймара_(кыв).mw
@@ -89,6 +89,39 @@
 | 
 |}
 
+== Лыдакывъяс ==
+
+:1	maya
+:2	paya
+:3	kimsa
+:4	pusi
+:5	phisqa
+:6	suxta
+:7	paqalqu
+:8	kimsaqalqu
+:9	llatunka
+:10	tunka
+:11	tunka-mayani
+:12	tunka-payani
+:13	tunka-kumsani
+:14	tunka-pusini
+:15	tunka-phisqani
+:16	tunka-suxtani
+:17	tunka-paqalquni
+:18	tunka-kimsaqalquni
+:19	tunka-llatunkani
+:20	pätunka
+:30	kimsa-tunka
+:40	pusi-tunka
+:50	phisqa-tunka
+:60	suxta-tunka
+:70	paqalqu-tunka
+:80	kimsaqalqu-tunka
+:90	llatunka-tunka
+:100	 pataka
+:500 phisqa-pataka
+:1000 waranqa
+
 == Ыстӧдъяс ==
 
 * [http://aymara.org/index.php aymara.org] 
