*Empty MediaWiki Message*

--- a/Эфиопия.mw
+++ b/Эфиопия.mw
@@ -47,7 +47,7 @@
 }}
 
 '''Эфиопия''', ''Эфиопияса Федерация Демократия Республика'' ({{lang-am|ኢትዮጵያ, የኢትዮጵያ ፌዴራላዊ ዲሞክራሲያዊ ሪፐብሊክ}}) — тайӧ  [[канму]] [[Африка]]ын.  
-
+[[Файл:Ethiopia regions english.png|300пкс]]
 {{Африка}}
 
 [[Категория:Эфиопия]]
