*Empty MediaWiki Message*

--- a/Эускара_кыв.mw
+++ b/Эускара_кыв.mw
@@ -17,7 +17,10 @@
 | ''be''
 |-
 | style="text-align: center" | C
-| ''ze'' (Ç ''ze hautsia'')
+| ''ze''
+|-
+| style="text-align: center" | Ç
+| ''ze hautsia''
 |-
 | style="text-align: center" | D
 | ''de''
@@ -62,7 +65,7 @@
 | ''pe''
 |-
 | style="text-align: center" | Q
-| ''ku*''
+| ''ku''
 |-
 | style="text-align: center" | R
 | ''erre''
@@ -77,19 +80,16 @@
 | ''u''
 |-
 | style="text-align: center" | V
-| ''uve*''
+| ''uve''
 |-
 | style="text-align: center" | W
-| ''uve bikoitza*''
+| ''uve bikoitza''
 |-
 | style="text-align: center" | X
 | ''ixa''
 |-
 | style="text-align: center" | Y
-| ''i grekoa*''
-|-
-| style="text-align: center" | Z
-| ''zeta''
+| ''i grekoa''
 |-
 | style="text-align: center" | Z
 | ''zeta''
