--- a/Мари_кыв.mw
+++ b/Мари_кыв.mw
@@ -120,6 +120,7 @@
 * Википедия:
 ** [[Файл:Wikipedia-logo.png|15px|Википедия]] [[:mhr:|Видз Мари кыв вылын]]
 ** [[Файл:Wikipedia-logo.png|15px|Википедия]] [[:mrj:|Керӧс Мари кыв вылын]]
+{{interwiki|mhr|Тӱҥ_лаштык|Видз Мари|}}
 
 {{Чудь-йӧгра кывъяс}}
 {{Stub}}
