*Empty MediaWiki Message*

--- a/Спиридонов_Юрий_Алексеевич.mw
+++ b/Спиридонов_Юрий_Алексеевич.mw
@@ -1,13 +1,44 @@
-'''Спиридонов Юрий Алексеевич''' (1938—2010) — [[Коми республикаса Юралысь]] ([[1994]]—[[2001]]), [[Россия]]ын [[Государственнӧй Дума]]са [[депутат]] ([[2003]]—[[2007]]), [[Естественнӧй наукаяслӧн Россияса академия]]ӧ збыльвывса пырысь, [[Горнӧй наукаясса Академия]]ӧ збыльвывса пырысь, экономика наукаясса доктор. 
+[[Файл:Спиридонов Ю.А. 1.jpg|250 px|right|thumb|Спиридонов Юрий Алексеевич (1938-2010)]]
+
+'''Спиридонов Юрий Алексеевич''' ([[1938]]—[[2010]]) – [[Коми Республикаса Юралысь]] ([[1994]]—[[2001]]), [[Россия Федерацияса Государственнӧй Дума]]са [[депутат]] ([[2003]]—[[2007]]), [[Естественнӧй наукаяслӧн Россияса академия]]ӧ збыльвывса пырысь, [[Горнӧй наукаясса Академия]]ӧ збыльвывса пырысь, экономика наукаясса доктор. 
 
 ==Олан туй==
-* [[1938]], [[1 вӧльгым|вӧльгым тӧлысь 1 лун]] — чужис [[Омск обласьт]]са [[Полтавка]] [[сикт]]ын.
-* [[2010 во|2010]] [[12 моз|моз тӧлысь 1 лун]] — кувсис [[Сыктывкар]]ын, гуалӧма [[Гӧрд Затонса шойна]] вылын.
+* [[1938]], [[1 вӧльгым|вӧльгым тӧлысь 1 лун]] – чужис [[Омск обласьт]]са [[Полтавка]] [[сикт]]ын.
+* [[1961]] – помалiс [[Свердловск]]ын горнöй институт. 
+* [[1961]]–[[1964]] – уджаліс [[Магаданск обласьт]]ын «Горный» приискын горнöй мастерöн, участокын веськöдлыьöс вежыьöн, медыджыд горнöй мастерöн.
+* [[1964]]–[[1975]] – [[Коми АССР]]-ын Ярега управлениеса отделын инженер, участокын начальник. Шахтаын веськöдлысь. 
+* [[1975]]–[[1989]] – [[КПСС]]-лöн [[Ухта]] [[кар]]са комитетын отделöн веськöдлысь (заведующий), КПСС-лöн [[Усинск]] райкомын медводдза секретар, КПСС-лöн Коми обкомын мöд секретар.
+* [[1989]]–[[1990]] – КПСС-лöн Коми обкомын медводдза секретар.
+* [[1990]]–[[1994]] – [[Коми АССР]]-са Верховнöй Сöветын веськöдлысь.
+* [[1993]], [[ӧшым тӧлысь]] – медводдза созыва Федерация Сöветö пырысь, [[1994]] вося [[кос му тӧлысь]]öдз пырис бюджет, валюта, сьöм да кредит регулируйтöм, сьöм эмиссия, вот перъян политика да таможеня регулируйтан комитетö, сэсся – войвыв да этша лыда войтырлöн делöяс серти комитетö пырысь.
+* [[1994]], [[7 ода кора|ода-кора тöлысь 7 лун]] – вермис бöрйысьöмъяс дырйи да лои [[Коми Республикаса Юралысь]]öн да, [[Коми Республикаса Оланподув]] серти, тшöтш и и правительствоöн веськöдлысьöн.
+* [[1997]], [[30 вӧльгым|вöльгым тöлысь 30 лун]] – вермис кадысь водз бöрйысьöм вылын да выльысь пуксис [[Коми Республикаса Юралысь]]ö.
+* [[2001]] – [[Коми Республикаса Юралысь]]ö бöрйысигöн босьтiс 34,9 % гöлöс да ворссис [[Коми Республикаса Каналан Сӧвет]]öн веськöдлысь [[Торлопов Владимир Александрович]]лы (сылöн 40 % гöлöс).
+* [[2003]], [[ӧшым тӧлысь]] – йöзыс бöрйисны 18 №-а Сыктывкарса öти мандата кытш серти [[Россия Федерацияса Государственнöй Дума]]ö [[депутат]]öн. Вöлi уджалö вöр-ва ресурсъяс да найöн вöдитчöм серти комитетын.
+* [[2010 во|2010]], [[12 моз|моз тӧлысь 12 лун]] – кувсис [[Сыктывкар]]ын, гуалӧма [[Гӧрд Затонса шойна]] вылын.
 
-==Ӧшмӧс==
+== Наградаяс ==
+* Коми АССР-са народнӧй овмӧсын нимйӧза уджалысь.
+* Войтыръяслӧн ёртасьӧм  орден ([[1993]], [[11 вӧльгым|вӧльгым тӧлысь 11 лун]]) – демократическöй вежсьöмъяс, экономика да политика  реформаяс олöмö пöртöмысь
+*  IV тшупöда «Айму водзын уджысь» орден ([[1998]], [[13 вӧльгым|вӧльгым тӧлысь 13 лун]]) – государство водзын заслугаясысь да республикалöн социально-экономическöй сöвмöмö пай пуктöмысь.
+* Уджалан Гöрд дöрапас орден 
+* Преподобнöй Сергий Радонежскöй орден ([[1996]])
+* вежа царевич Дмитрий орден ([[1997]])
+* Ыджыд Петыр нима Национальнöй общественнöй премиа ([[2001 во]], [[ода кора тӧлысь]])
+
+== Паметь ==
+[[Файл:Спиридонов Ю.А. Паметник.jpg|250 px|right|thumb|Ю.А. Спиридоновлы Гӧрд Затонса шойна вылын паметник (2012 во)]]
+* [[2011 во]]ын [[Гӧрд Затонса шойна]] вылын вылын Юрий Спиридонов гу вылын вӧлі восьтӧма казьтылан комплекс да сувтӧдӧма озысь бюст, кодöс вöчис Владимир Матюхин. Сылöн гöтыр Галина Медухалöн кывъяс серти, бюстсö вöлi вöчöма недыр кежлö. [[2012 во]]ся [[20 кос му|косму тöлысь 20-öд лунö]] гу вылас пуктöма гранитысь казьтылан паметник. А озысь бюстö шуöма сувтöдны Коми республикаса Юралысь бердын Искусствояс гимназия йöрö.
+* [[2012 во]]ын Ю.А. Спиридоновлысь нимсö сетöма Коми республикаса Юралысь бердын Искусствояс гимназиялы 
+
+== Ӧшмӧсъяс ==
 * http://www.komiinform.ru/services/persons/131/
+* http://www.komiinform.ru/news/87604/
+* http://finugor.ru/leaders/candidate/17930
 
 [[Категория:Персоналия анбурӧд]]
 [[Категория:Персоналия:Коми]]
 [[Категория:Коми республикаса Юралысьяс]]
 [[Категория:Туялысьяс]]
+
+[[ru:Спиридонов, Юрий Алексеевич]]
