*Empty MediaWiki Message*

--- a/1839-ӧд_во.mw
+++ b/1839-ӧд_во.mw
@@ -1,14 +1,15 @@
-'''1839 во''' - [[Григорий календар]] серти, абу кассяна во, пансьö воторниксянь.
+{{Вояс|1839}}
+'''1839 во''' — [[Григорий календар]] серти, абу [[кассяна во]], пансьö [[воторник]]сянь.
 
-== Гажъяс ==
 == Лоӧмторъяс ==
-* [[Россия]]ын пансьö сьöм реформа (1839—1843).
+* [[Россия]]ын пансьö сьöм реформа (1839 во—[[1843 во]]).
 == Чужисны ==
-* [[21 рака|рака 21 лун]] — [[Мусоргский, Модест Петрович|Модест Петрович Мусоргский]], роч [[шылад тэчысь]] (кулiс [[1881]]).
-* [[12 кос му|косму 12 лун]] — [[Пржевальский, Николай Михайлович|Николай Михайлович Пржевальский]], роч ветлысь-мунысь да натуралист (кулiс [[1888]]).
-* [[18 сора|сора 18 лун]] - [[Куратов Ӧльӧш Вань]] ({{lang-ru|Куратов Иван Алексеевич}}), (куліс [[1875]] вося [[29 вӧльгым|вӧльгым 29 лун]]ö ) - медводдза [[коми поэт]], [[коми литература]]лы подув пуктысь.
+* [[21 рака|рака тӧлысь 21 лун]] — [[Россия|роч]] шылад тэчысь [[Мусоргский Модест Петрович]] (кулiс [[1881 во]]).
+* [[12 кос му|косму тӧлысь 12 лун]] — [[Россия|роч]] ветлысь-мунысь да натуралист [[Пржевальский Николай Михайлович]] (кулiс [[1888 во]]).
+* [[18 сора|сора тӧлысь 18 лун]] — медводдза [[коми-зыряна|коми]] поэт, [[коми литература]]лы подув пуктысь [[Куратов Ӧльӧш Вань]] ({{lang-ru|Куратов Иван Алексеевич}}) (куліс [[1875 во]], [[29 вӧльгым|вӧльгым тӧлысь 29 лун]]).
 == Кулісны ==
-* [[4 ода кора|ода-кора 4 лун]] — [[Давыдов, Денис Васильевич|Денис Давыдов]], роч [[поэт]], герой [[1812 вося Айму вӧсна тыш]]ся герой.
+* [[4 ода кора|ода-кора тӧлысь 4 лун]] — [[Россия|роч]] поэт, [[1812 вося Айму вӧсна тыш]]ся герой [[Давыдов Денис Васильевич|Денис Давыдов]].
+== Ӧшмӧс ==
 
 [[Категория:1839]]
 
