r2.7.2) (робот вежи: [[lb:(1) Ceres]], [[ru:Церера]]

--- a/Церера.mw
+++ b/Церера.mw
@@ -59,7 +59,7 @@
 [[ko:세레스 (왜행성)]]
 [[kw:Ceres (planet còr)]]
 [[la:Ceres (planetulus)]]
-[[lb:Ceres (Zwergplanéit)]]
+[[lb:(1) Ceres]]
 [[li:Ceres (dwergplaneet)]]
 [[lt:Cerera (nykštukinė planeta)]]
 [[lv:Cerera]]
@@ -82,7 +82,7 @@
 [[qu:Siris (tuna puriq quyllur)]]
 [[rm:Ceres (planet nanin)]]
 [[ro:Ceres (planetă pitică)]]
-[[ru:Церера (карликовая планета)]]
+[[ru:Церера]]
 [[scn:Cèriri]]
 [[sh:1 Ceres]]
 [[simple:Ceres (dwarf planet)]]
