*Empty MediaWiki Message*

--- a/Египет_Араб_Республика.mw
+++ b/Египет_Араб_Республика.mw
@@ -9,7 +9,7 @@
 <!-- |Аудио= -->
 |Веськӧдлан ног=[[Республика]]
 |Каналан эскӧм=
-|Мусерпас=LocationEgypt.svg
+|Мусерпас=Egypt in its region (undisputed).svg
 |Кыв=[[Араб кыв|араб]]
 |Дата независимости/Канму панӧм=
 <!-- |Независимость от= -->
