*Empty MediaWiki Message*

--- a/Торлопов_Владимир_Александрович.mw
+++ b/Торлопов_Владимир_Александрович.mw
@@ -1,16 +1,39 @@
-[[Файл:Vladimir Torlopov.jpg|250 px|right|thumb|(Торлопов Владимир Александрович (1949) - Коми Республикаса Юралысь (2001-2010)]]
+[[Файл:Vladimir Torlopov.jpg|250 px|right|thumb|(Торлопов Владимир Александрович ([[1949]]) — Коми Республикаса Юралысь ([[2001]]—[[2010]])]]
 
 
-'''Торлопов Ӧльӧксан Володь''' ({{Lang-ru|Владимир Александрович Торлопов}}) — [[Коми Республикаса Юралысь]] ([[2001]]—[[2010]]), социология наукаясса доктор ([[1999]]).
+'''Торлопов Ӧльӧксан Володь''' ({{Lang-ru|Владимир Александрович Торлопов}}) — [[Коми Республикаса Юралысь]] ([[2001]]—[[2010]]), Россия Федерацияысь Федеральнӧй Собраниеса Федерация Советӧ пырысь ([[2010 во]]), социология наукаясса доктор ([[1999]]).
 
 ==Олан туй==
-* [[1949]], [[14 вӧльгым|вӧльгым тӧлысь 14 лун]] — чужис [[Сыктывкар]]ын. Сылöн батьыс Александр Полиектович — [[Коми-Зыряна|коми]], вöлi сплавконтораса уджалысьяслöн профсоюзса нырщик, мамыс Мария Петровна — [[Роч|роч]] — репрессированнöй семьяысь, вöлi быдтöма интернатын, уджалöма подув классъясын велöдысьöн.
-* [[1970]] — помалic [[Коми государственнӧй педагогика институт]], лоис физикаысь велӧдысьӧн.
-* [[1990]] — [[Коми АССР-са Верховнӧй Сӧвет]]са депутат.
-* [[1995]] — [[Коми Республикаса Каналан Сӧвет]]са веськӧдлысь.
-* [[2001]] — [[2011 во]] — [[Федерация Сӧвет]]ӧ пырысь
-* [[2001]] — [[2011 во]] — [[Коми республикаса Юралысь]].
-* [[2010 во]] — [[Федерация Сӧвет]]ӧ пырысь.
+* [[1949]], [[14 вӧльгым|вӧльгым тӧлысь 14 лун]] — чужис [[Сыктывкар]]ын. Сылöн батьыс Александр Полиектович — [[Коми-Зыряна|коми]], вöлi сплавконтораса уджалысьяслöн профсоюзса нырщик, мамыс Мария Петровна — [[Роч кыв|роч]] — репрессированнöй семьяысь, вöлi быдтöма интернатын, уджалöма подув классъясын велöдысьöн.
+* [[1970]] — помалic [[Коми канму педагогика институт]].
+* [[1971]] – [[Вылыс Максаковка]]са шӧр школаын физика велӧдысь.
+* [[1972]]–[[1973]] – армияын служба.
+* [[1974]] – профсоюзса уджалысьяслӧн Коми обкомын инструктор, юкӧдӧн юрнуӧдысь, веськӧдлысь.
+* [[1988]] – [[Ленинград]]са Вылыс партия школа.
+* [[1990]] – бӧрйӧма профсоюзъяссянь 150-ӧд номера [[Межадор (Сыктыв район)|Межадор]]са бӧрйысян кытшсянь ([[Сыктыв район]]) [[Коми АССР-са  Верховнӧй Сӧвет]]ӧ [[депутат]]ӧн.
+* [[1993]] – Коми Республикаса Министръяслӧн Сӧветысь веськӧдлысьӧс медводдза вежысь (социальнӧй юалӧмъяс серти).
+* [[1993]] – Пиво радейтысьяслӧн ютырӧ пырысь.
+* [[1995]] да [[1999]] – бӧрйӧма [[Коми Республикаса Каналан Сӧвет]]са [[депутат]]ӧн 1-ӧд номера Лесозаводса бӧрйысян кытшсянь ([[Сыктывкар]]), Каналан Сӧветса веськӧдлысь.
+* [[1996]] – [[Россия Федерацияысь Федеральнӧй Собраниеса Федерация Совет]]ӧ пырысь, веськӧдлӧ социальнӧй политика юалӧмъяс серти комитетӧн.
+* [[2001]], [[16 ӧшым|ӧшым тӧлысь 16 лун]] – бӧрйӧма [[Коми Республикаса Юралысь]]ӧн. В.А. Торлопов (сылöн 40 % гöлöс) ордйис сэк кадся [[Коми Республикаса Юралысь]] [[Спиридонов Юрий Алексеевич]]ӧс (сылӧн 34,9 % гöлöс).
+* [[2002]], [[15 тӧв шӧр|тӧвшӧр тӧлысь 15 лун]] – вынсьӧдісны [[Коми Республикаса Юралысь]] должносьтын.
+* [[2005]], [[7 ӧшым|ӧшым тӧлысь 7 лун]] – [[Россия Федерацияса Президент]] [[Путин Владимир Владимирович]] вӧзйис, а [[Коми Республикаса Каналан Сӧвет]] вынсьӧдіс В.А. Торлоповӧс [[Коми Республикаса Юралысь]] должносьтын. 
+* [[2010]], [[14 тӧв шӧр|тӧвшӧр тӧлысь 14 лун]] – В.А. Торлоповлӧн кыдзи [[Коми Республикаса Юралысь]]лӧн, помасисны полномочиеясыс.
+* [[2010]], [[3 рака|рака тӧлысь 3 лун]] – Коми Республикаса правительствосянь пырӧ [[Россия Федерацияысь Федеральнӧй Собраниеса Федерация Совет]]ӧ.
+
+== Туясян удж==
+* [[1999]] – [[Санкт-Петербург]]ын дорйис «Политическая социология» специальносьт серти социология наукаясса доктор ним вылӧ диссертация. 
+* Герцен нима Санкт-Петербургса Государственнӧй педагогика университетысь Туялысьяслӧн Сӧветӧ пырысь.
+
+== Наградаяс ==
+* Коми Республикаса нимӧдана уджалысь
+* Почёт орден – сетӧма [[1999]] вося [[14 вӧльгым|вӧльгым тӧлысь 14-ӧд лунся]] [[Россия Федерацияса Президент]]лӧн указӧн
+* [[Россия Федерацияса Президент]]лӧн аттьӧалӧм ([[2005]], [[25 моз|моз тӧлысь 25 лун]])
+* IV тшупöда «Айму водзын уджысь» орден – Коми Республикалöн социально-экономическöй сöвмöмö пай пуктöмысь да уна вося бур уджысь ([[2006]], [[13 вӧльгым|вӧльгым тӧлысь 13 лун]])
+* II тшупӧда Преподобнöй Сергий Радонежскöй нима орден ([[2001]])
+* Святослав Фёдоров нима премиаын «Федерация» нимпасын лауреат ([[2004]])
+* «Мывкыд мӧвпъясысь да бур уджысь» ({{Lang-ru|За благородные помыслы и достойные деяния}}) казьтылана медаль ([[2004]])
+* «Айму вӧсна Ыджыд тышын 60-ӧд вося Вермӧмысь» казьтылана медаль ([[2005]])
 
 == Ӧшмӧсъяс==
 * http://rkomi.ru/print/razdelpseudo/165/
