*Empty MediaWiki Message*

--- a/Молодцов_анбур.mw
+++ b/Молодцов_анбур.mw
@@ -1,5 +1,5 @@
 '''Молодцов анбур''' - тайӧ аслыспöлöс Коми анбур. Сыöн вöдитчылiсны [[Коми-Зыряна|зыряна комияс]] [[1918]]-[[1932]] да [[1936]]-[[1938]] воясö, а [[Коми-Пермякъяс|перым комияс]] [[1921]]-[[1932]] воясö. Лöсьöдысьыс - коми кывтуялысь [[Молодцов Ӧльӧксан Василей|В.А. Молодцов]]. 
-Тайö анбурын быд коми шыыслы лöсялiс торъя шыпас. Унджык пасыс босьтöма вöлi роч азбукаысь, куимыс - '''''в, и''''' да '''''й''''' шыяс пасйöм могысь - латинсаысь. Молодцов серти небыдсö петкöдлöмаöсь шыпас бöрсö вывланьö чукыльтöмöн, гардчöм шыяссö - увланьö чукыльтöмöн.
+Тайö анбурын быд коми шыыслы лöсялiс торъя шыпас. Унджык пасыс босьтöма вöлi роч азбукаысь, куимыс - '''''д''''', '''''и''''' да '''''й''''' шыяс пасйöм могысь - латинсаысь. Молодцов серти небыдсö петкöдлöмаöсь шыпас бöрсö вывланьö чукыльтöмöн, гардчöм шыяссö - увланьö чукыльтöмöн.
 Шыпасъяс '''''ф, х''''' да '''''ц''''' анбурас медводз эз вöвны. Шыпас '''''щ''''' петкöдлöма гардчöм '''''тш''''' шы.
 
 
