*Empty MediaWiki Message*

--- a/Молодцов_анбур.mw
+++ b/Молодцов_анбур.mw
@@ -1,8 +1,13 @@
-'''Молодцов анбур''' - тайӧ аслыспöлöс Коми анбур. Сыöн вöдитчылiсны [[Коми-Зыряна|зыряна комияс]] [[1918]]-[[1932]] да [[1936]]-[[1938]] воясö, а [[Коми-Пермякъяс|перым комияс]] [[1921]]-[[1932]] воясö. Лöсьöдысьыс - коми кывтуялысь [[Молодцов Ӧльӧксан Василей|В.А. Молодцов]]. 
-Тайö анбурын быд коми шыыслы лöсялiс торъя шыпас. Унджык пасыс босьтöма вöлi роч азбукаысь, куимыс - '''''д''''', '''''и''''' да '''''й''''' шыяс пасйöм могысь - латинсаысь. Молодцов серти небыдсö петкöдлöмаöсь шыпас бöрсö вывланьö чукыльтöмöн, гардчöм шыяссö - увланьö чукыльтöмöн.
-Шыпасъяс '''''ф, х''''' да '''''ц''''' анбурас медводз эз вöвны. Шыпас '''''щ''''' петкöдлöма гардчöм '''''тш''''' шы.
+[[Файл:Komi Molodtsov' alfabet.jpg|250px|right|thumb|Молодцов анбур «Шонді югöр» небöгын (1926' во)]]
 
+'''Молодцов анбур''' - тайӧ аслыспöлöс Коми анбур. Сыöн вöдитчылiсны [[Коми-Зыряна|зыряна комияс]] [[1918]]-[[1932]] да [[1936]]-[[1938]] воясö, а [[Коми-Пермякъяс|перым комияс]] [[1921]]-[[1932]] воясö. Лöсьöдысьыс - коми кывтуялысь [[Молодцов Сандрö Васьö|В.А. Молодцов]]. 
 
+==Вылöм==
+Молодцов анбур вылын лэдзöмаöсь [[1920]]-öд воясся уна коми небöг да газет-журнал. Тайо анбур вылын коми войтырыслöн пансис коми кывъя школаын велöдчöм.
+
+Молодцов анбурысь эновтчылысны медводз коми латынь вылö вуджiгмоз (вочасöн [[1930]]'-[[1932]]' вояс чöж), а сэсся мöдпöв шыбитiсны сiйöс [[1938]]' воö, тайö пöрйö роч коддьöм графика пыртöмысла.
+
+==Анбур==
 {| cellpadding=4 style="font-size:larger; text-align:center;" summary="Thirty-three letters of the Molodtsov alphabet, capital and small"
 |+ style="font-size:smaller;" | '''МОЛОДЦОВ АНБУР'''
 |-
@@ -13,11 +18,39 @@
 | '''С с''' || '''Ԍ ԍ''' || '''Т т''' || '''Ԏ ԏ''' || '''У у''' || ('''Ф ф''') || ('''Х х''') || ('''Ц ц''') ||'''Ч ч''' || '''Ш ш''' || '''Щ щ''' || '''Ы ы''' ||
 |}
 
+==Шыпасъяс==
+Тайö анбурын быд коми шыыслы лöсялiс торъя шыпас. Унджык пасыс босьтöма вöлi роч азбукаысь, куимыс - '''''д''''', '''''и''''' да '''''й''''' шыяс пасйöм могысь - латинсаысь.  
 
-Молодцов анбур вылын лэдзöмаöсь [[1920]]-öд воясся уна коми небöг да газет-журнал. Тайо анбур вылын коми войтырыслöн пансис коми кывъя школаын велöдчöм.
+Шыпасъяс '''''ф, х''''' да '''''ц''''' анбурас медводз эз вöвны, 1920' вояс помын найöс пыртöмаöсь, рочысь босьтöм кывъясын торъя шыяс петкöдлöм могысь. 
 
-Молодцов анбурысь эновтчылысны медводз коми латынь вылö вуджiгмоз (вочасöн [[1930]]-[[1932]] вояс чöж), а сэсся мöдпöв шыбитiсны сiйöс [[1938]] воö, тайö пöрйö роч коддьöм графика пыртöмысла.
+[[Латина анбур]]ысь босьтöмöсь шыпасъяс 
+*'''Ԁ''' = öнія '''д'''
+*'''і''' = öнія '''и''', '''і'''
+*'''ј''' = öнія '''й'''
+*'''ӧ''' = öнія '''ö'''
 
+[[Небыт шы]]яс мыччалöмöсь вылö чутіка шыпасъясöн: 
+*'''ԃ''' = öнія '''дь'''
+*'''ԅ''' = öнія '''зь'''
+*'''ԉ''' = öнія '''ль'''
+*'''ԋ''' = öнія '''нь'''
+*'''ԍ''' = öнія '''сь'''
+*'''ԏ''' = öнія '''ть'''
+
+Аслыспöлöс [[аффриката]]яс мыччалöмöсь улö чутіка шыпасъясöн: 
+*'''җ''' = öнія '''дж''' 
+*'''ԇ''' = öнія '''дз''' 
+*'''щ''' = öнія '''тш'''
+
+==Öшмöсъяс==
+*''Коми язык. Энциклопедия'' / Отв. ред. Г.В. Федюнёва. М., 1998. 608 c. ISBN 5-7903-0045-6
+*Молодцов В. ''Некоторые принципы зырянского правописания''. Усть-Сысольск, 1927.
+
+==Ыстöгъяс==
+* [http://foto11.com/komi/docs/molodtsovfont.php Молодцов анбур йылысь рочöн]
+* [http://komikyv.ru/blog/comp/113.html Кыдз молодцов шыпасъяс Mac OS-ын точкыны]
+
+==Видзöд нöшта==
 * [[Важ Перым гижӧм]]
 
 [[Категория:Коми]]
