*Empty MediaWiki Message*

--- a/Молодцов_анбур.mw
+++ b/Молодцов_анбур.mw
@@ -1,6 +1,6 @@
 [[Файл:Komi Molodtsov' alfabet.jpg|250px|right|thumb|Молодцов анбур «Шонді югöр» небöгын (1926' во)]]
 
-'''Молодцов анбур''' - тайӧ аслыспöлöс Коми анбур. Сыöн вöдитчылiсны [[Коми-Зыряна|зыряна комияс]] [[1918]]-[[1932]] да [[1936]]-[[1938]] воясö, а [[Коми-Пермякъяс|перым комияс]] [[1921]]-[[1932]] воясö. Лöсьöдысьыс - коми кывтуялысь [[Молодцов Сандрö Васьö|В.А. Молодцов]]. 
+'''Молодцов анбур''' — тайӧ аслыспöлöс Коми анбур. Сыöн вöдитчылiсны [[Коми-Зыряна|зыряна комияс]] [[1918]]-[[1932]] да [[1936]]-[[1938]] воясö, а [[Коми-Пермякъяс|перым комияс]] [[1921]]-[[1932]] воясö. Лöсьöдысьыс — коми кывтуялысь [[Молодцов Сандрö Васьö|В.А. Молодцов]]. 
 
 ==Вылöм==
 Молодцов анбур вылын лэдзöмаöсь [[1920]]-öд воясся уна коми небöг да газет-журнал. Тайо анбур вылын коми войтырыслöн пансис коми кывъя школаын велöдчöм.
