*Empty MediaWiki Message*

--- a/Молодцов_анбур.mw
+++ b/Молодцов_анбур.mw
@@ -29,7 +29,7 @@
 *'''ј''' = öнія '''й'''
 *'''ӧ''' = öнія '''ö'''
 
-[[Небыт шы]]яс мыччалöмöсь вылö чутіка шыпасъясöн: 
+[[Небыд шы]]яс мыччалöмöсь вылö чутіка шыпасъясöн: 
 *'''ԃ''' = öнія '''дь'''
 *'''ԅ''' = öнія '''зь'''
 *'''ԉ''' = öнія '''ль'''
