*Empty MediaWiki Message*

--- a/Коми_овъяс.mw
+++ b/Коми_овъяс.mw
@@ -1,4 +1,4 @@
-'''Коми овъяс''' - [[коми]] да [[Коми-Пермякъяс|перымса коми]] йöз костын важöнсянь паныдасьлысь да сöмын на артмöм овъяс, кодъясöс аслыныс лöсьöдöны коми йöз.
+'''Коми овъяс''' — [[Комияс|коми зыряна]]лöн да [[Коми-Пермякъяс|перым комияс]]лöн важъя да öнія овъяс, кодъясöс аслыныс лöсьöдöмаöсь коми йöз.
 
 == Ов тэчас ==
 Тэчас сертиыс коми овъяс öткодьöсь [[роч]] овъяскöд. Найö артмöмаöсь [[коми ним|нимъяс]] да прöзвишшöяс дорö роч суффиксъяс содтöмöн (-ин, -ов / - ев, - ских).
@@ -863,10 +863,10 @@
 # [[Ярусов]]
 
 == Ӧшмӧсъяс ==
-* [[Плесовский Фёдор Васильевич|''Плесовский Ф.В.'']] Коми комиын овъяс / Сост. [[Жеребцов Игорь Любомирович|''И.Л. Жеребцов'']]. - [[Сыктывкар]], 1997. - 141 с.
+* [[Плесовский Фёдор Васильевич|''Плесовский Ф.В.'']] Комиын овъяс / Сост. [[Жеребцов Игорь Любомирович|''И.Л. Жеребцов'']]. - [[Сыктывкар]], 1997. - 141 с.
 * Фамилии восточно-финского происхождения // ''Унбегаун Б.-О.'' Русские фамилии. - М.,1995. - С. 284.
-* ''Климов В.В.'' Миян фамиллёэз // Иньва, Кудымкар, 1987.
-* ''Кривощёкова-Гантман А.С.'' Русские фамилии коми-пермяцкого происхождения // Языки и ономастика Прикамья. - [[Пермь]], 1973. - С. 78-84.
+* ''[[Климов Василий Васильевич|Климов В.В.]]'' Миян фамиллёэз // Иньва, Кудымкар, 1987.
+* ''[[Кривощёкова-Гантман Антонина Семёновна|Кривощёкова-Гантман А.С.]]'' Русские фамилии коми-пермяцкого происхождения // Языки и ономастика Прикамья. - [[Пермь]], 1973. - С. 78-84.
 * ''Кривощёкова-Гантман А.С.'' Фамилии на -ег, -ог // Ономастика Поволжья. - [[Саранск]], 1976. - Вып.4. - С.91-93.
 * ''Мосин А.Г.'' Исторические корни уральских фамилий. - [[Екатеринбург]], 2008.- С. 254-268.
 * ''Теплоухов А. Ф.'' Фамилии и географические названия Пермяцкого края в этнографическом и историко-географическом отношениях // Коми му. 1925. 9 (19). Усть-Сысольск. С. 34.
