*Empty MediaWiki Message*

--- a/Коми_овъяс.mw
+++ b/Коми_овъяс.mw
@@ -1,4 +1,4 @@
-'''Коми овъяс''' — [[Комияс|коми зыряна]]лöн да [[Коми-Пермякъяс|перым комияс]]лöн важъя да öнія овъяс, кодъясöс аслыныс лöсьöдöмаöсь коми йöз.
+'''Коми овъяс''' — [[Комияс|коми зыряна]]лöн да [[Коми пермякъяс|перым комияс]]лöн важъя да öнія овъяс, кодъясöс аслыныс лöсьöдöмаöсь коми йöз.
 
 == Ов тэчас ==
 Тэчас сертиыс коми овъяс öткодьöсь [[роч]] овъяскöд. Найö артмöмаöсь [[коми ним|нимъяс]] да прöзвишшöяс дорö роч суффиксъяс содтöмöн (-ин, -ов / - ев, - ских).
