*Empty MediaWiki Message*

--- a/Волоф_(кыв).mw
+++ b/Волоф_(кыв).mw
@@ -1,5 +1,5 @@
 [[Файл:Wolof Locator.png|мини|Волоф Сенегалын]]
-'''Волоф''' (''wolof'') — тайӧ Сенегалын, Гамбияын да Мавританяын атлантика-конго кыв. Анбуръяс — латин, араб, волофал.
+'''Волоф''' (''wolof'') — тайӧ Сенегалын, Гамбияын да Мавританяын атлантика-конго кыв. Анбуръяс — латин, корсюрӧ араб, важӧн волофал.
 
 == Волоф анбур ==
 [[Файл:MaggiSenegal.jpg|мини]]
